public/css/main.css
/*CSS FILES */
@import url(elements/nav.css);
@import url(elements/product.css);
@import url(fiche-produit.css);


/* FONTS */
@import url(https://fonts.googleapis.com/css?family=Quicksand:400,300,700);

p{font-size: 13px;}

body{
    overflow-x: hidden;
}
.homepage,
.page{
    font-family: 'Quicksand', sans-serif;
    font-size : 13px;
}

.homepage-content{
    position: relative;
    top: 0;
}


/* TITILE & SUBTITLE & BUTTONS*/

h1.title{
    font-size: 24px;
    text-transform: uppercase;
    text-align: center;
    padding: 20px 0;
}

h3.sub-title{
    font-size: 13px;
    text-align: center;
    padding-bottom: 10px;
}

h3.small-title {
    font-size: 16px;
    text-transform: uppercase;
    padding: 15px 0;
    text-align: center;
}

.hdg-button-default{
    padding: 10px 20px;
    background-color: black;
    color: white;
    border: 0;
    text-transform: uppercase;
    font-size: 16px;
    border-radius: 0;
}

.hdg-button-small{
    padding: 5px 10px;
    background-color: black;
    color: white;
    border: 0;
    text-transform: none;
    font-size: 13px;
    border-radius: 0;
    height: 30px;
}

a{
    color: black;
    text-transform: uppercase;
}
a:hover, a:active{
    color: black;
    text-decoration: underline;
}

*:focus {
    outline: none;
}

    /* INPUT */

    input.hdg-input-default{
        height: 30px;
        min-width: 250px;
    }

/* END TITILE & SUBTITLE */


/* BEGIN ELEMENTS */

    /* NAVBAR */
    a.navbar-brand.header-logo {
        padding: 6px;
    }

    .homepage nav.navbar.navbar-inverse.navbar-fixed-top{
        background-color: rgba(0, 0, 0, 0.5);
        border-color: transparent;
        transition: all .5s ease .25s;
    }
    #nav.affix {
        background-color: black;
        -webkit-transform: translate3d(0,0,0);
        -o-transform: translate3d(0,0,0);
        transform: translate3d(0,0,0);
    }

    .navbar-nav>li>.dropdown-menu.affix{
        position: absolute;
         background-color: black;
        -webkit-transform: translate3d(0,0,0);
        -o-transform: translate3d(0,0,0);
        transform: translate3d(0,0,0);   
    }
    .navbar-nav>li>.dropdown-menu.affix-top{
        background-color: rgba(0, 0, 0, 0.5);
        border-color: transparent;
        transition: all .5s ease .25s; 
    }

    /* END NAVBAR */

/* END ELEMENTS */


/* BEGIN HOMEPAGE*/

    /* SLIDER */
    .slider-hp img{
        width: 100%;
        height: auto;
    }
    /* END SLIDER*/

    /* BLOC NOUVEAUTES */
    .nouveautes{
        position: relative;
    }

    .nouveautes h1.title{
        transform: rotate(-90deg);
        margin: 0;
        padding: 0;
        left: 0;
        top: 63px;
        position: absolute;
    }

    /* END BLOC NOUVEAUTES */

    /* BLOC AMBIANCES HOMEPAGE */
    .ambiance {
        min-height: 400px;
        background-color: #eeeeee;
        padding: 20px 0;
    }

    .ambiance img {
        width: 100%;
    }

    hr{
        width: 10%;
        border-top-color: black;
    }

    .ambiance3 {
        margin-top: 18px;
    }

    h3.show-ambiances {
        text-transform: uppercase;
        text-align: center;
        font-size: 20px;
        padding: 20px 0;
    }

    h3.show-ambiances:after {
        content: "\f054";
        font-family: FontAwesome;
        font-size: 18px;
        position: absolute;
        padding-left: 5px;
        padding-top: 2px;
    }

    .ambiance-content{
        position: relative;
        
    }

    .ambiance-content .ambiance-text{
        position: absolute;
        top: 20px;
        width: 400px;
        left: 20px;
    }

    .ambiance-content .ambiance-text .ambiance-name {
        text-transform: uppercase;
        padding-bottom: 10px;
        font-size: 20px;
    }

    .ambiance-content .ambiance-text .ambiance-desc {
        padding-bottom: 10px;
        font-size: 13px;
    }


    /* END BLOC AMBIANCES HOMEPAGE */

    /* BLOC ENGAGEMENTS */
    .engagement.row {
        color: white;
        background: #000000;
        padding: 40px 0;
        text-align: center;
    }

    .engagement p{
        font-size: 13px;
    }
    /* END BLOC ENGAGEMENT */


    /* BLOC OPPORTUNITES HOMEPAGE */

    .opportunity h1.title,
    .opportunity h3.sub-title{
        text-align: left;
    }
    .opportunity{
        min-height: 450px;
        position: relative;
    }

    .opportunity .container {
        padding: 40px 0;
    }

    .opportunity .opportunity-content p {
        font-size: 18px;
    }
    .opportunity .opportunity-img{
        width: 100%;
        position: absolute;
        height: 450px;
        z-index: -1;

    }
    .opportunity .hdg-button-default {
        display: block;
        margin: auto;
    }
    .opportunity h3.sub-title {
        font-size: 18px;
    }
    .opportunity span{
        font-size: 16px;
        text-transform: uppercase;
        padding-right: 20px;
    }
    /* END BLOC OPPORTUNITES HOMEPAGE */

    /* BLOC ACTUALITES HOMEPAGE */
    .actualites {
        padding: 40px 0 ;
    }
    .actualites .thumbnail{
        padding: 0;
        border: 0;
    }
    .actualites .thumbnail h3.news-title{
        font-size: 16px;
        text-transform: uppercase;
        min-height: 45px;
    }
    .actualites a.news-show{
        text-transform: none;
        float: right;
        text-decoration: underline;
    }
    .actualites .thumbnail .caption {
        padding-right: 0;
        padding-left: 0;
    }
    /* END BLOC ACTUALITES HOMEPAGE */

/* END HOMEPAGE */






















/* DEFAULT LAYOUT */
.page .navbar-nav>li>.dropdown-menu.affix-top{
    background-color: #000000;
}
.page .navbar-inverse{
    background-color: #000000;
    border-color: #000000;
}
.breadcrumb{
    top: 50px;
    position: relative;
}

.main-content{
    padding-top: 40px;
    padding-bottom: 40px;
}

/*FIN DEFAULT LAYOUT*/


/* BEGIN PRODUCT LIST CSS */

h3.product-title-list{
    font-size: 16px; 
    margin: 5px 0;
}
/* FIN PRODUCT LIST CSS */





/* BEFIN FICHE PRODUIT */
h2.product-title{
    font-size: 24px;
    text-transform: uppercase;
}

.fiche-produit .bloc-images{
    position: absolute;
}


.fiche-produit .bloc-images .item img{
    max-height: 500px;
}

.fiche-produit .product-price{
    font-size: 18px;
}
h3.related-product-title,
h3.selected-product-title,
h3.comment-product-title{
 padding-right: 15px;
 padding-left: 15px;
 text-transform: uppercase;
 font-size: 18px;
}

h4.review-title{
    font-size: 16px;
    font-weight: 600;
}
/* END FICHE PRODUIT */






/* BEGIN SOCIAL */
.social .social-icon{
    display: inline-block;
    text-align: center;
    padding-right: 15px;
}
.social i{
    font-size: 24px;
}

.social .social-icon.fb a{
    color: #043861;
}

.social .social-icon.twitter a{
    color: #307be1;
}

.social .social-icon.google-plus a{
    color: #ca0814;
}

.social .social-icon.instagram a{
    color: #77400b;
}

.social .social-icon.pinterest a{
    color: #cd2c2f;
}

.social .social-icon.youtube a{
    color: #650205;
}

.social .social-icon a{
    font-size: 13px;
    text-transform: none;
    text-align: center;
}

.social .social-icon a:hover{
    text-decoration: none;
}

.social {
    display: block;
    padding-top: 20px;
}
/*END SOCIAL*/



/********************************************************
******************** BEGIN BOTTOM ***********************
********************************************************/
    
    /* SOCIAL BOTTOM */
    .social-bottom {
        padding: 25px 0 50px 0;
    }

    h3.social-bottom-title{
        font-size: 24px;
        text-align: center;
        text-transform: uppercase;
    }

    .social-bottom .social .social-icon.fb a>i{
        font-size: 30px;
    }

    .social-bottom .social {
        text-align: center;
        margin-top: 50px;
    }

    .social-bottom .social .social-icon{
        padding-right: 30px;
    }

    /* END SOCIAL BOTTOM */

    /* FOOTER */

    footer.footer {
        padding: 30px 0 20px 0;
        border-top: 1px solid black;
    }

    .mentions {
        background: #000000;
        color: #ffffff;
        text-transform: uppercase;
        padding-top: 10px;
        padding-bottom: 10px;
    }

    .mentions a {
        font-size: 13px;
        text-decoration: none;
        color: white;
        text-transform: uppercase;
    }

    .mentions a:hover {
        text-decoration: underline;
        color: white;
    }

    .bloc-footer {
        font-size: 13px;
    }

    .bloc-footer a  {
        font-size: 13px;
        height: auto;
        text-decoration: none;
        color: #000000;
        margin-bottom: 100px;
        text-transform: uppercase;
    }

    .bloc-footer a:hover  {
        text-decoration: underline;
        color: #000000;
    }

    .title-footer {
        font-size: 16px;
        height: 40px;
        line-height: 40px;
        text-transform: uppercase;
        margin-top: 0;
    }

    .title-footer-big {
        font-size: 24px;
        height: 40px;
        line-height: 40px;
        text-transform: uppercase;
    }

    .social-icons {
        height: 70px;
    }

    /* END FOOTER */

    
/********************************************************
******************** END BOTTOM *************************
********************************************************/





/********************************************************
******************** RESPONSIVE *************************
********************************************************/

    /* ECRANS MOBILE */
    @media screen and (max-width: 767px){

        /* FOOTER */
        .bloc-footer {
            padding-bottom: 20px;
        }
    }
    /* END ECRANS MOBILE*/

/********************************************************
******************** END RESPONSIVE *********************
********************************************************/

